--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <div class="converter">
             <h2>Vori, Ana, Roti, Point to Gram Converter</h2>
             <form id="toGramForm">
-                <input type="number" id="vori" placeholder="Vori" value="1">
-                <input type="number" id="ana" placeholder="Ana" value="0">
-                <input type="number" id="roti" placeholder="Roti" value="0">
-                <input type="number" id="point" placeholder="Point" value="0">
+                <input type="number" id="vori" placeholder="Vori" value="">
+                <input type="number" id="ana" placeholder="Ana" value="">
+                <input type="number" id="roti" placeholder="Roti" value="">
+                <input type="number" id="point" placeholder="Point" value="">
                 <button type="button" onclick="convertToGram()">Convert</button>
             </form>
             <p id="gramResult">0 Gram</p>
@@ -49,7 +49,7 @@
         <div class="converter">
             <h2>Gram to Vori, Ana, Roti, Point Converter</h2>
             <form id="toVoriForm">
-                <input type="number" id="gram" placeholder="Gram" value="1">
+                <input type="number" id="gram" placeholder="Gram" value="">
                 <button type="button" onclick="convertToVori()">Convert</button>
             </form>
             <p id="voriResult">Vori: 0, Ana: 0, Roti:0, Point: 0</p>
